增加 Valine Admin 教程

--- a/docs/views/tools/2.work.md
+++ b/docs/views/tools/2.work.md
@@ -28,7 +28,7 @@ http://www.51yuansu.com/?z=cqhrqfwzg
 ``` html
 https://cn.office-converter.com/
 ```
-## 4. 消除图片中的背景 – 巨好用的抠图工具 :+1::+1::+1:
+## 4. 消除图片中的背景 – 巨好用的抠图工具  ※推荐指数：:+1::+1::+1:
 [在线地址](https://www.remove.bg/zh/upload)
 ``` html
 https://www.remove.bg/zh/upload
@@ -48,6 +48,24 @@ https://tinypng.com/
 [在线地址](http://www.shejidaren.com/category/design-tools)
 ``` html
 http://www.shejidaren.com/category/design-tools
+```
+
+## 8. 稿定设计-在线PS ※推荐指数：:+1:
+[在线地址](https://www.gaoding.com)
+``` html
+https://www.gaoding.com
+```
+
+## 9. 改图宝 - 在线修改照片大小尺寸
+[在线地址](https://www.gaitubao.com)
+``` html
+https://www.gaitubao.com
+```
+
+## 10. 在线制作 GIF动画工具
+[在线地址](http://gif.55.la/)
+``` html
+http://gif.55.la
 ```
 
 ::: tip
