--- a/docs/views/technology-sharing/jsDir/2.gaode_1.md
+++ b/docs/views/technology-sharing/jsDir/2.gaode_1.md
@@ -19,7 +19,7 @@ tags:
 
 ## 1.marker点以及信息窗体
 ### 效果展示
-![mark.png](https://upload-images.jianshu.io/upload_images/17304901-fd10b91e28287b2a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![mark.png](/tech/js/mark.webp)
 
 ### (1)事先我们需要提前准备这样一段css样式
 ``` css
