--- a/docs/views/tools/1.baseTools.md
+++ b/docs/views/tools/1.baseTools.md
@@ -13,6 +13,8 @@ tags:
 
 <!-- more -->
 
+[To #4](2.work.html#_4-消除图片中的背景-–-巨好用的抠图工具-※推荐指数：)
+
 ## 1. 在线JSON校验格式化工具（Be JSON）
  [在线地址](http://www.bejson.com/)
 ``` html
