--- a/docs/views/technology-sharing/jsDir/2.gaode_1.md
+++ b/docs/views/technology-sharing/jsDir/2.gaode_1.md
@@ -19,7 +19,8 @@ tags:
 
 ## 1.marker点以及信息窗体
 ### 效果展示
-![mark.png](/tech/js/mark.webp)
+
+![mark.png](./img/mark.png)
 
 ### (1)事先我们需要提前准备这样一段css样式
 ``` css
